@@ -1,5 +1,5 @@
 # build properties for line-graphing
 project.depends.data=data
 project.depends.source=src
-project.depends.lib=phetcommon piccolo-phet
+project.depends.lib=phetcommon piccolo-phet games
 project.flavor.line-graphing.mainclass=edu.colorado.phet.linegraphing.LineGraphingApplication
